src/parser.output
Rules never reduced

   46 my_var_list: MY VARIABLE


State 7 conflicts: 24 shift/reduce
State 21 conflicts: 1 shift/reduce
State 22 conflicts: 1 shift/reduce
State 39 conflicts: 2 shift/reduce
State 40 conflicts: 2 shift/reduce
State 120 conflicts: 5 reduce/reduce
State 175 conflicts: 4 shift/reduce
State 240 conflicts: 2 shift/reduce
State 347 conflicts: 4 shift/reduce
State 349 conflicts: 4 shift/reduce


Grammar

    0 $accept: start $end

    1 start: cmds

    2 cmds: cmd
    3     | cmds cmd
    4     | cmds error

    5 cmd: SC
    6    | single_cmd SC
    7    | trailing_if SC
    8    | trailing_unless SC
    9    | trailing_while SC
   10    | trailing_until SC
   11    | if_block
   12    | loop
   13    | define_sub
   14    | define_cmd

   15 single_cmd: expr_cmd
   16           | return_cmd
   17           | skip_cmd
   18           | next_cmd
   19           | last_cmd
   20           | C_command
   21           | my_var_list
   22           | package
   23           | print
   24           | printf
   25           | query
   26           | read_grid
   27           | read_columns
   28           | read_var_list
   29           | split
   30           | use
   31           | a_user_cmd

   32 expr_cmd: expr

   33 last_cmd: LAST

   34 next_cmd: NEXT

   35 return_cmd: RETURN
   36           | RETURN expr

   37 words: WORD
   38      | words WORD

   39 cmd_words: CMDWORD
   40          | cmd_words CMDWORD

   41 C_command: EXECUTE STRING BOOL STRING '(' r_paren

   42 var_list_comma: VARIABLE
   43               | var_list_comma ',' VARIABLE

   44 var_list_nocomma: VARIABLE
   45                 | var_list_nocomma VARIABLE

   46 my_var_list: MY VARIABLE
   47            | MY var_list_comma
   48            | MY '(' var_list_comma ')'
   49            | MY ARRAY
   50            | MY VARIABLE ASSIGNOP expr

   51 package: GREPACKAGE CMDWORD

   52 use: USE CMDWORD

   53 print: PRINT listexpr
   54      | PRINT CMDWORD listexpr
   55      | PRINT COLUMNS
   56      | PRINT cmd_words
   57      | PRINT

   58 printf: PRINTF listexpr
   59       | PRINTF CMDWORD listexpr

   60 query: QUERY VARIABLE
   61      | QUERY VARIABLE STRING
   62      | QUERY VARIABLE STRING '(' listexpr r_paren

   63 read_columns_spec_list: read_columns_spec
   64                       | read_columns_spec_list read_columns_spec

   65 read_columns_spec: WORD COLUMN_IDENT expr
   66                  | STRING COLUMN_IDENT expr
   67                  | WORD

   68 read_columns: READ COLUMNS read_columns_spec_list
   69             | READ COLUMNS read_columns_spec_list expr
   70             | READ COLUMNS WORD read_columns_spec_list
   71             | READ COLUMNS WORD read_columns_spec_list expr

   72 read_grid: READ READ_GRID WORD
   73          | READ READ_GRID WORD listexpr_nocomma
   74          | READ READ_GRID WORD words
   75          | READ READ_GRID WORD words listexpr_nocomma

   76 read_var_list: READ WORD var_list_nocomma
   77              | READ var_list_nocomma

   78 split: SPLIT
   79      | ARRAY ASSIGNOP SPLIT

   80 loop: do_while_block
   81     | do_until_block
   82     | while_block
   83     | until_block
   84     | for_block
   85     | foreach_block

   86 if_block: IF expr block ELSE block
   87         | IF expr block
   88         | UNLESS expr block ELSE block
   89         | UNLESS expr block

   90 block: start_of_block cmds end_of_block

   91 start_of_block: '{'

   92 end_of_block: '}'

   93 trailing_if: single_cmd IF expr

   94 trailing_unless: single_cmd UNLESS expr

   95 trailing_while: single_cmd WHILE expr

   96 trailing_until: single_cmd UNTIL expr

   97 while_context: /* empty */

   98 while_block: WHILE while_context texpr block

   99 until_block: UNTIL while_context texpr block

  100 do_while_block: DO block WHILE texpr SC

  101 do_until_block: DO block UNTIL texpr SC

  102 for_block: FOR '(' expr ';' texpr ';' expr r_paren block

  103 foreach_block: FOREACH VARIABLE '(' listexpr r_paren block
  104              | FOREACH VARIABLE '(' ARRAY r_paren block

  105 define_sub: SUB words block
  106           | SUB words '(' PROTOTYPE r_paren block

  107 define_cmd: CMD words '(' PROTOTYPE r_paren block
  108           | CMD words '(' PROTOTYPE r_paren

  109 a_user_cmd: cmd_words
  110           | cmd_words listexpr_nocomma

  111 listexpr_nocomma: expr
  112                 | listexpr_nocomma expr

  113 skip_cmd: SKIP
  114         | SKIP '(' WORD ')'
  115         | SKIP '(' WORD expr ')'

  116 texpr: /* empty */
  117      | expr

  118 expr: NUM
  119     | S_FROM S_TO

  120 @1: /* empty */

  121 expr: '/' @1 MATCH_STRING END_MATCH_STRING
  122     | CHOP
  123     | CHOP VARIABLE
  124     | CHOP '(' VARIABLE ')'
  125     | CHOMP
  126     | CHOMP VARIABLE
  127     | CHOMP '(' VARIABLE ')'
  128     | DIE
  129     | DIE expr
  130     | EXIT expr
  131     | GLOB '(' expr ')'
  132     | INDEX '(' expr ',' expr ')'
  133     | INDEX '(' expr ',' expr ',' expr ')'
  134     | WARN expr
  135     | '<' '>'
  136     | '<' words '>'
  137     | FILE_TEST expr
  138     | SYSTEM '(' expr ')'
  139     | SUBSTR '(' expr ',' expr ',' expr ')'
  140     | SUBSTR '(' expr ',' expr ')'
  141     | SPRINTF '(' listexpr ')'
  142     | REWIND '(' ')'
  143     | REWIND
  144     | REWIND WORD
  145     | REWIND '(' WORD ')'
  146     | OPEN WORD
  147     | OPEN expr
  148     | OPEN '(' WORD ',' expr ')'
  149     | CLOSE
  150     | CLOSE WORD
  151     | CLOSE '(' WORD ')'
  152     | VARIABLE
  153     | VARIABLE_END
  154     | PATTERN_VARIABLE
  155     | ARRAY ASSIGNOP '(' listexpr ')'
  156     | expr ASSIGNOP expr
  157     | UNLINK '(' listexpr ')'
  158     | VARIABLE '[' expr ']'
  159     | STRING
  160     | expr DOT expr
  161     | expr STRING_EQ expr
  162     | expr STRING_NE expr
  163     | expr '<' expr
  164     | expr LE expr
  165     | expr '>' expr
  166     | expr EQ expr
  167     | expr NE expr
  168     | expr GE expr
  169     | expr OR expr
  170     | expr AND expr
  171     | expr '?' expr ':' expr
  172     | expr '+' expr
  173     | expr '-' expr
  174     | expr MULOP expr
  175     | expr '/' expr
  176     | expr '%' expr
  177     | expr POWOP expr
  178     | NOT expr
  179     | '(' expr r_paren
  180     | FUNCTION_USER '(' ')'
  181     | FUNCTION_USER '(' listexpr ')'
  182     | FUNCTION_BUILTIN_NUMERIC '(' ')'
  183     | FUNCTION_BUILTIN_NUMERIC '(' listexpr ')'
  184     | FUNCTION_BUILTIN_TEXT '(' expr ')'
  185     | FUNCTION_BUILTIN_TEXT '(' expr ',' expr ')'
  186     | '-' expr
  187     | '+' expr
  188     | VARIABLE POSTDEC
  189     | VARIABLE POSTINC
  190     | VARIABLE '[' expr ']' POSTDEC
  191     | VARIABLE '[' expr ']' POSTINC

  192 r_paren: ')'

  193 SC: ';'

  194 listexpr: expr
  195         | listexpr ',' expr


Terminals, with rules where they appear

$end (0) 0
'%' (37) 176
'(' (40) 41 48 62 102 103 104 106 107 108 114 115 124 127 131 132 133
    138 139 140 141 142 145 148 151 155 157 179 180 181 182 183 184
    185
')' (41) 48 114 115 124 127 131 132 133 138 139 140 141 142 145 148
    151 155 157 180 181 182 183 184 185 192
'+' (43) 172 187
',' (44) 43 132 133 139 140 148 185 195
'-' (45) 173 186
'/' (47) 121 175
':' (58) 171
';' (59) 102 193
'<' (60) 135 136 163
'>' (62) 135 136 165
'?' (63) 171
'[' (91) 158 190 191
']' (93) 158 190 191
'{' (123) 91
'}' (125) 92
error (256) 4
NUM (258) 118
ARRAY (259) 49 79 104 155
PATTERN_VARIABLE (260) 154
VARIABLE (261) 42 43 44 45 46 50 60 61 62 103 104 123 124 126 127 152
    158 188 189 190 191
VARIABLE_END (262) 153
COLUMN_IDENT (263) 65 66
ASSIGNOP (264) 50 79 155 156
END_MATCH_STRING (265) 121
BOOL (266) 41
CMD (267) 107 108
DIE (268) 128 129
EXIT (269) 130
WARN (270) 134
DO (271) 100 101
ELSE (272) 86 88
EXECUTE (273) 41
FOR (274) 102
FOREACH (275) 103 104
FILE_TEST (276) 137
GLOB (277) 131
IF (278) 86 87 93
INDEX (279) 132 133
LAST (280) 33
NEXT (281) 34
RETURN (282) 35 36
CHOMP (283) 125 126 127
CHOP (284) 122 123 124
READ_GRID (285) 72 73 74 75
COLUMNS (286) 55 68 69 70 71
MY (287) 46 47 48 49 50
GREPACKAGE (288) 51
USE (289) 52
SKIP (290) 113 114 115
SPLIT (291) 78 79
STRING_EQ (292) 161
STRING_NE (293) 162
SUB (294) 105 106
SUBSTR (295) 139 140
SPRINTF (296) 141
SYSTEM (297) 138
UNLESS (298) 88 89 94
UNLINK (299) 157
WHILE (300) 95 98 100
UNTIL (301) 96 99 101
PRINT (302) 53 54 55 56 57
PRINTF (303) 58 59
OPEN (304) 146 147 148
REWIND (305) 142 143 144 145
CLOSE (306) 149 150 151
QUERY (307) 60 61 62
READ (308) 68 69 70 71 72 73 74 75 76 77
DOT (309) 160
EQ (310) 166
LE (311) 164
GE (312) 168
NOT (313) 178
AND (314) 170
OR (315) 169
WORD (316) 37 38 65 67 70 71 72 73 74 75 76 114 115 144 145 146 148
    150 151
CMDWORD (317) 39 40 51 52 54 59
PROTOTYPE (318) 106 107 108
FUNCTION_BUILTIN_NUMERIC (319) 182 183
FUNCTION_BUILTIN_TEXT (320) 184 185
FUNCTION_USER (321) 180 181
STRING (322) 41 61 62 66 159
MATCH_STRING (323) 121
S_FROM (324) 119
S_TO (325) 119
NE (326) 167
MULOP (327) 174
UNARY (328)
POWOP (329) 177
POSTDEC (330) 188 190
POSTINC (331) 189 191


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
start (94)
    on left: 1, on right: 0
cmds (95)
    on left: 2 3 4, on right: 1 3 4 90
cmd (96)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 2 3
single_cmd (97)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31,
    on right: 6 93 94 95 96
expr_cmd (98)
    on left: 32, on right: 15
last_cmd (99)
    on left: 33, on right: 19
next_cmd (100)
    on left: 34, on right: 18
return_cmd (101)
    on left: 35 36, on right: 16
words (102)
    on left: 37 38, on right: 38 74 75 105 106 107 108 136
cmd_words (103)
    on left: 39 40, on right: 40 56 109 110
C_command (104)
    on left: 41, on right: 20
var_list_comma (105)
    on left: 42 43, on right: 43 47 48
var_list_nocomma (106)
    on left: 44 45, on right: 45 76 77
my_var_list (107)
    on left: 46 47 48 49 50, on right: 21
package (108)
    on left: 51, on right: 22
use (109)
    on left: 52, on right: 30
print (110)
    on left: 53 54 55 56 57, on right: 23
printf (111)
    on left: 58 59, on right: 24
query (112)
    on left: 60 61 62, on right: 25
read_columns_spec_list (113)
    on left: 63 64, on right: 64 68 69 70 71
read_columns_spec (114)
    on left: 65 66 67, on right: 63 64
read_columns (115)
    on left: 68 69 70 71, on right: 27
read_grid (116)
    on left: 72 73 74 75, on right: 26
read_var_list (117)
    on left: 76 77, on right: 28
split (118)
    on left: 78 79, on right: 29
loop (119)
    on left: 80 81 82 83 84 85, on right: 12
if_block (120)
    on left: 86 87 88 89, on right: 11
block (121)
    on left: 90, on right: 86 87 88 89 98 99 100 101 102 103 104 105
    106 107
start_of_block (122)
    on left: 91, on right: 90
end_of_block (123)
    on left: 92, on right: 90
trailing_if (124)
    on left: 93, on right: 7
trailing_unless (125)
    on left: 94, on right: 8
trailing_while (126)
    on left: 95, on right: 9
trailing_until (127)
    on left: 96, on right: 10
while_context (128)
    on left: 97, on right: 98 99
while_block (129)
    on left: 98, on right: 82
until_block (130)
    on left: 99, on right: 83
do_while_block (131)
    on left: 100, on right: 80
do_until_block (132)
    on left: 101, on right: 81
for_block (133)
    on left: 102, on right: 84
foreach_block (134)
    on left: 103 104, on right: 85
define_sub (135)
    on left: 105 106, on right: 13
define_cmd (136)
    on left: 107 108, on right: 14
a_user_cmd (137)
    on left: 109 110, on right: 31
listexpr_nocomma (138)
    on left: 111 112, on right: 73 75 110 112
skip_cmd (139)
    on left: 113 114 115, on right: 17
texpr (140)
    on left: 116 117, on right: 98 99 100 101 102
expr (141)
    on left: 118 119 121 122 123 124 125 126 127 128 129 130 131 132
    133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148
    149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164
    165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180
    181 182 183 184 185 186 187 188 189 190 191, on right: 32 36 50
    65 66 69 71 86 87 88 89 93 94 95 96 102 111 112 115 117 129 130
    131 132 133 134 137 138 139 140 147 148 156 158 160 161 162 163
    164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179
    184 185 186 187 190 191 194 195
@1 (142)
    on left: 120, on right: 121
r_paren (143)
    on left: 192, on right: 41 62 102 103 104 106 107 108 179
SC (144)
    on left: 193, on right: 5 6 7 8 9 10 100 101
listexpr (145)
    on left: 194 195, on right: 53 54 58 59 62 103 141 155 157 181
    183 195


state 0

    0 $accept: . start $end

    NUM                       shift, and go to state 1
    ARRAY                     shift, and go to state 2
    PATTERN_VARIABLE          shift, and go to state 3
    VARIABLE                  shift, and go to state 4
    VARIABLE_END              shift, and go to state 5
    CMD                       shift, and go to state 6
    DIE                       shift, and go to state 7
    EXIT                      shift, and go to state 8
    WARN                      shift, and go to state 9
    DO                        shift, and go to state 10
    EXECUTE                   shift, and go to state 11
    FOR                       shift, and go to state 12
    FOREACH                   shift, and go to state 13
    FILE_TEST                 shift, and go to state 14
    GLOB                      shift, and go to state 15
    IF                        shift, and go to state 16
    INDEX                     shift, and go to state 17
    LAST                      shift, and go to state 18
    NEXT                      shift, and go to state 19
    RETURN                    shift, and go to state 20
    CHOMP                     shift, and go to state 21
    CHOP                      shift, and go to state 22
    MY                        shift, and go to state 23
    GREPACKAGE                shift, and go to state 24
    USE                       shift, and go to state 25
    SKIP                      shift, and go to state 26
    SPLIT                     shift, and go to state 27
    SUB                       shift, and go to state 28
    SUBSTR                    shift, and go to state 29
    SPRINTF                   shift, and go to state 30
    SYSTEM                    shift, and go to state 31
    UNLESS                    shift, and go to state 32
    UNLINK                    shift, and go to state 33
    WHILE                     shift, and go to state 34
    UNTIL                     shift, and go to state 35
    PRINT                     shift, and go to state 36
    PRINTF                    shift, and go to state 37
    OPEN                      shift, and go to state 38
    REWIND                    shift, and go to state 39
    CLOSE                     shift, and go to state 40
    QUERY                     shift, and go to state 41
    READ                      shift, and go to state 42
    NOT                       shift, and go to state 43
    CMDWORD                   shift, and go to state 44
    FUNCTION_BUILTIN_NUMERIC  shift, and go to state 45
    FUNCTION_BUILTIN_TEXT     shift, and go to state 46
    FUNCTION_USER             shift, and go to state 47
    STRING                    shift, and go to state 48
    S_FROM                    shift, and go to state 49
    '<'                       shift, and go to state 50
    '+'                       shift, and go to state 51
    '-'                       shift, and go to state 52
    '/'                       shift, and go to state 53
    '('                       shift, and go to state 54
    ';'                       shift, and go to state 55

    start            go to state 56
    cmds             go to state 57
    cmd              go to state 58
    single_cmd       go to state 59
    expr_cmd         go to state 60
    last_cmd         go to state 61
    next_cmd         go to state 62
    return_cmd       go to state 63
    cmd_words        go to state 64
    C_command        go to state 65
    my_var_list      go to state 66
    package          go to state 67
    use              go to state 68
    print            go to state 69
    printf           go to state 70
    query            go to state 71
    read_columns     go to state 72
    read_grid        go to state 73
    read_var_list    go to state 74
    split            go to state 75
    loop             go to state 76
    if_block         go to state 77
    trailing_if      go to state 78
    trailing_unless  go to state 79
    trailing_while   go to state 80
    trailing_until   go to state 81
    while_block      go to state 82
    until_block      go to state 83
    do_while_block   go to state 84
    do_until_block   go to state 85
    for_block        go to state 86
    foreach_block    go to state 87
    define_sub       go to state 88
    define_cmd       go to state 89
    a_user_cmd       go to state 90
    skip_cmd         go to state 91
    expr             go to state 92
    SC               go to state 93


state 1

  118 expr: NUM .

    $default  reduce using rule 118 (expr)


state 2

   79 split: ARRAY . ASSIGNOP SPLIT
  155 expr: ARRAY . ASSIGNOP '(' listexpr ')'

    ASSIGNOP  shift, and go to state 94


state 3

  154 expr: PATTERN_VARIABLE .

    $default  reduce using rule 154 (expr)


state 4

  152 expr: VARIABLE .
  158     | VARIABLE . '[' expr ']'
  188     | VARIABLE . POSTDEC
  189     | VARIABLE . POSTINC
  190     | VARIABLE . '[' expr ']' POSTDEC
  191     | VARIABLE . '[' expr ']' POSTINC

    POSTDEC  shift, and go to state 95
    POSTINC  shift, and go to state 96
    '['      shift, and go to state 97

    $default  reduce using rule 152 (expr)


state 5

  153 expr: VARIABLE_END .

    $default  reduce using rule 153 (expr)


state 6

  107 define_cmd: CMD . words '(' PROTOTYPE r_paren block
  108           | CMD . words '(' PROTOTYPE r_paren

    WORD  shift, and go to state 98

    words  go to state 99


state 7

  128 expr: DIE .
  129     | DIE . expr

    NUM                       shift, and go to state 1
    ARRAY                     shift, and go to state 100
    PATTERN_VARIABLE          shift, and go to state 3
    VARIABLE                  shift, and go to state 4
    VARIABLE_END              shift, and go to state 5
    DIE                       shift, and go to state 7
    EXIT                      shift, and go to state 8
    WARN                      shift, and go to state 9
    FILE_TEST                 shift, and go to state 14
    GLOB                      shift, and go to state 15
    INDEX                     shift, and go to state 17
    CHOMP                     shift, and go to state 21
    CHOP                      shift, and go to state 22
    SUBSTR                    shift, and go to state 29
    SPRINTF                   shift, and go to state 30
    SYSTEM                    shift, and go to state 31
    UNLINK                    shift, and go to state 33
    OPEN                      shift, and go to state 38
    REWIND                    shift, and go to state 39
    CLOSE                     shift, and go to state 40
    NOT                       shift, and go to state 43
    FUNCTION_BUILTIN_NUMERIC  shift, and go to state 45
    FUNCTION_BUILTIN_TEXT     shift, and go to state 46
    FUNCTION_USER             shift, and go to state 47
    STRING                    shift, and go to state 48
    S_FROM                    shift, and go to state 49
    '<'                       shift, and go to state 50
    '+'                       shift, and go to state 51
    '-'                       shift, and go to state 52
    '/'                       shift, and go to state 53
    '('                       shift, and go to state 54

    NUM                       [reduce using rule 128 (expr)]
    ARRAY                     [reduce using rule 128 (expr)]
    PATTERN_VARIABLE          [reduce using rule 128 (expr)]
    VARIABLE                  [reduce using rule 128 (expr)]
    VARIABLE_END              [reduce using rule 128 (expr)]
    DIE                       [reduce using rule 128 (expr)]
    EXIT                      [reduce using rule 128 (expr)]
    WARN                      [reduce using rule 128 (expr)]
    GLOB                      [reduce using rule 128 (expr)]
    INDEX                     [reduce using rule 128 (expr)]
    CHOMP                     [reduce using rule 128 (expr)]
    CHOP                      [reduce using rule 128 (expr)]
    SUBSTR                    [reduce using rule 128 (expr)]
    SPRINTF                   [reduce using rule 128 (expr)]
    SYSTEM                    [reduce using rule 128 (expr)]
    UNLINK                    [reduce using rule 128 (expr)]
    OPEN                      [reduce using rule 128 (expr)]
    REWIND                    [reduce using rule 128 (expr)]
    CLOSE                     [reduce using rule 128 (expr)]
    FUNCTION_BUILTIN_NUMERIC  [reduce using rule 128 (expr)]
    FUNCTION_BUILTIN_TEXT     [reduce using rule 128 (expr)]
    FUNCTION_USER             [reduce using rule 128 (expr)]
    STRING                    [reduce using rule 128 (expr)]
    S_FROM                    [reduce using rule 128 (expr)]
    $default                  reduce using rule 128 (expr)

    expr  go to state 101


state 8

  130 expr: EXIT . expr

    NUM                       shift, and go to state 1
    ARRAY                     shift, and go to state 100
    PATTERN_VARIABLE          shift, and go to state 3
    VARIABLE                  shift, and go to state 4
    VARIABLE_END              shift, and go to state 5
    DIE                       shift, and go to state 7
    EXIT                      shift, and go to state 8
    WARN                      shift, and go to state 9
    FILE_TEST                 shift, and go to state 14
    GLOB                      shift, and go to state 15
    INDEX                     shift, and go to state 17
    CHOMP                     shift, and go to state 21
    CHOP                      shift, and go to state 22
    SUBSTR                    shift, and go to state 29
    SPRINTF                   shift, and go to state 30
    SYSTEM                    shift, and go to state 31
    UNLINK                    shift, and go to state 33
    OPEN                      shift, and go to state 38
    REWIND                    shift, and go to state 39
    CLOSE                     shift, and go to state 40
    NOT                       shift, and go to state 43
    FUNCTION_BUILTIN_NUMERIC  shift, and go to state 45
    FUNCTION_BUILTIN_TEXT     shift, and go to state 46
    FUNCTION_USER             shift, and go to state 47
    STRING                    shift, and go to state 48
    S_FROM                    shift, and go to state 49
    '<'                       shift, and go to state 50
    '+'                       shift, and go to state 51
    '-'                       shift, and go to state 52
    '/'                       shift, and go to state 53
    '('                       shift, and go to state 54

    expr  go to state 102


state 9

  134 expr: WARN . expr

    NUM                       shift, and go to state 1
    ARRAY                     shift, and go to state 100
    PATTERN_VARIABLE          shift, and go to state 3
    VARIABLE                  shift, and go to state 4
    VARIABLE_END              shift, and go to state 5
    DIE                       shift, and go to state 7
    EXIT                      shift, and go to state 8
    WARN                      shift, and go to state 9
    FILE_TEST                 shift, and go to state 14
    GLOB                      shift, and go to state 15
    INDEX                     shift, and go to state 17
    CHOMP                     shift, and go to state 21
    CHOP                      shift, and go to state 22
    SUBSTR                    shift, and go to state 29
    SPRINTF                   shift, and go to state 30
    SYSTEM                    shift, and go to state 31
    UNLINK                    shift, and go to state 33
    OPEN                      shift, and go to state 38
    REWIND                    shift, and go to state 39
    CLOSE                     shift, and go to state 40
    NOT                       shift, and go to state 43
    FUNCTION_BUILTIN_NUMERIC  shift, and go to state 45
    FUNCTION_BUILTIN_TEXT     shift, and go to state 46
    FUNCTION_USER             shift, and go to state 47
    STRING                    shift, and go to state 48
    S_FROM                    shift, and go to state 49
    '<'                       shift, and go to state 50
    '+'                       shift, and go to state 51
    '-'                       shift, and go to state 52
    '/'                       shift, and go to state 53
    '('                       shift, and go to state 54

    expr  go to state 103


state 10

  100 do_while_block: DO . block WHILE texpr SC
  101 do_until_block: DO . block UNTIL texpr SC

    '{'  shift, and go to state 104

    block           go to state 105
    start_of_block  go to state 106


state 11

   41 C_command: EXECUTE . STRING BOOL STRING '(' r_paren

    STRING  shift, and go to state 107


state 12

  102 for_block: FOR . '(' expr ';' texpr ';' expr r_paren block

    '('  shift, and go to state 108


state 13

  103 foreach_block: FOREACH . VARIABLE '(' listexpr r_paren block
  104              | FOREACH . VARIABLE '(' ARRAY r_paren block

    VARIABLE  shift, and go to state 109


state 14

  137 expr: FILE_TEST . expr

    NUM                       shift, and go to state 1
    ARRAY                     shift, and go to state 100
    PATTERN_VARIABLE          shift, and go to state 3
    VARIABLE                  shift, and go to state 4
    VARIABLE_END              shift, and go to state 5
    DIE                       shift, and go to state 7
    EXIT                      shift, and go to state 8
    WARN                      shift, and go to state 9
    FILE_TEST                 shift, and go to state 14
    GLOB                      shift, and go to state 15
    INDEX                     shift, and go to state 17
    CHOMP                     shift, and go to state 21
    CHOP                      shift, and go to state 22
    SUBSTR                    shift, and go to state 29
    SPRINTF                   shift, and go to state 30
    SYSTEM                    shift, and go to state 31
    UNLINK                    shift, and go to state 33
    OPEN                      shift, and go to state 38
    REWIND                    shift, and go to state 39
    CLOSE                     shift, and go to state 40
    NOT                       shift, and go to state 43
    FUNCTION_BUILTIN_NUMERIC  shift, and go to state 45
    FUNCTION_BUILTIN_TEXT     shift, and go to state 46
    FUNCTION_USER             shift, and go to state 47
    STRING                    shift, and go to state 48
    S_FROM                    shift, and go to state 49
    '<'                       shift, and go to state 50
    '+'                       shift, and go to state 51
    '-'                       shift, and go to state 52
    '/'                       shift, and go to state 53
    '('                       shift, and go to state 54

    expr  go to state 110


state 15

  131 expr: GLOB . '(' expr ')'

    '('  shift, and go to state 111


state 16

   86 if_block: IF . expr block ELSE block
   87         | IF . expr block

    NUM                       shift, and go to state 1
    ARRAY                     shift, and go to state 100
    PATTERN_VARIABLE          shift, and go to state 3
    VARIABLE                  shift, and go to state 4
    VARIABLE_END              shift, and go to state 5
    DIE                       shift, and go to state 7
    EXIT                      shift, and go to state 8
    WARN                      shift, and go to state 9
    FILE_TEST                 shift, and go to state 14
    GLOB                      shift, and go to state 15
    INDEX                     shift, and go to state 17
    CHOMP                     shift, and go to state 21
    CHOP                      shift, and go to state 22
    SUBSTR                    shift, and go to state 29
    SPRINTF                   shift, and go to state 30
    SYSTEM                    shift, and go to state 31
    UNLINK                    shift, and go to state 33
    OPEN                      shift, and go to state 38
    REWIND                    shift, and go to state 39
    CLOSE                     shift, and go to state 40
    NOT                       shift, and go to state 43
    FUNCTION_BUILTIN_NUMERIC  shift, and go to state 45
    FUNCTION_BUILTIN_TEXT     shift, and go to state 46
    FUNCTION_USER             shift, and go to state 47
    STRING                    shift, and go to state 48
    S_FROM                    shift, and go to state 49
    '<'                       shift, and go to state 50
    '+'                       shift, and go to state 51
    '-'                       shift, and go to state 52
    '/'                       shift, and go to state 53
    '('                       shift, and go to state 54

    expr  go to state 112


state 17

  132 expr: INDEX . '(' expr ',' expr ')'
  133     | INDEX . '(' expr ',' expr ',' expr ')'

    '('  shift, and go to state 113


state 18

   33 last_cmd: LAST .

    $default  reduce using rule 33 (last_cmd)


state 19

   34 next_cmd: NEXT .

    $default  reduce using rule 34 (next_cmd)


state 20

   35 return_cmd: RETURN .
   36           | RETURN . expr

    NUM                       shift, and go to state 1
    ARRAY                     shift, and go to state 100
    PATTERN_VARIABLE          shift, and go to state 3
    VARIABLE                  shift, and go to state 4
    VARIABLE_END              shift, and go to state 5
    DIE                       shift, and go to state 7
    EXIT                      shift, and go to state 8
    WARN                      shift, and go to state 9
    FILE_TEST                 shift, and go to state 14
    GLOB                      shift, and go to state 15
    INDEX                     shift, and go to state 17
    CHOMP                     shift, and go to state 21
    CHOP                      shift, and go to state 22
    SUBSTR                    shift, and go to state 29
    SPRINTF                   shift, and go to state 30
    SYSTEM                    shift, and go to state 31
    UNLINK                    shift, and go to state 33
    OPEN                      shift, and go to state 38
    REWIND                    shift, and go to state 39
    CLOSE                     shift, and go to state 40
    NOT                       shift, and go to state 43
    FUNCTION_BUILTIN_NUMERIC  shift, and go to state 45
    FUNCTION_BUILTIN_TEXT     shift, and go to state 46
    FUNCTION_USER             shift, and go to state 47
    STRING                    shift, and go to state 48
    S_FROM                    shift, and go to state 49
    '<'                       shift, and go to state 50
    '+'                       shift, and go to state 51
    '-'                       shift, and go to state 52
    '/'                       shift, and go to state 53
    '('                       shift, and go to state 54

    $default  reduce using rule 35 (return_cmd)

    expr  go to state 114


state 21

  125 expr: CHOMP .
  126     | CHOMP . VARIABLE
  127     | CHOMP . '(' VARIABLE ')'

    VARIABLE  shift, and go to state 115
    '('       shift, and go to state 116

    VARIABLE  [reduce using rule 125 (expr)]
    $default  reduce using rule 125 (expr)


state 22

  122 expr: CHOP .
  123     | CHOP . VARIABLE
  124     | CHOP . '(' VARIABLE ')'

    VARIABLE  shift, and go to state 117
    '('       shift, and go to state 118

    VARIABLE  [reduce using rule 122 (expr)]
    $default  reduce using rule 122 (expr)


state 23

   46 my_var_list: MY . VARIABLE
   47            | MY . var_list_comma
   48            | MY . '(' var_list_comma ')'
   49            | MY . ARRAY
   50            | MY . VARIABLE ASSIGNOP expr

    ARRAY     shift, and go to state 119
    VARIABLE  shift, and go to state 120
    '('       shift, and go to state 121

    var_list_comma  go to state 122


state 24

   51 package: GREPACKAGE . CMDWORD

    CMDWORD  shift, and go to state 123


state 25

   52 use: USE . CMDWORD

    CMDWORD  shift, and go to state 124


state 26

  113 skip_cmd: SKIP .
  114         | SKIP . '(' WORD ')'
  115         | SKIP . '(' WORD expr ')'

    '('  shift, and go to state 125

    $default  reduce using rule 113 (skip_cmd)


state 27

   78 split: SPLIT .

    $default  reduce using rule 78 (split)


state 28

  105 define_sub: SUB . words block
  106           | SUB . words '(' PROTOTYPE r_paren block

    WORD  shift, and go to state 98

    words  go to state 126


state 29

  139 expr: SUBSTR . '(' expr ',' expr ',' expr ')'
  140     | SUBSTR . '(' expr ',' expr ')'

    '('  shift, and go to state 127


state 30

  141 expr: SPRINTF . '(' listexpr ')'

    '('  shift, and go to state 128


state 31

  138 expr: SYSTEM . '(' expr ')'

    '('  shift, and go to state 129


state 32

   88 if_block: UNLESS . expr block ELSE block
   89         | UNLESS . expr block

    NUM                       shift, and go to state 1
    ARRAY                     shift, and go to state 100
    PATTERN_VARIABLE          shift, and go to state 3
    VARIABLE                  shift, and go to state 4
    VARIABLE_END              shift, and go to state 5
    DIE                       shift, and go to state 7
    EXIT                      shift, and go to state 8
    WARN                      shift, and go to state 9
    FILE_TEST                 shift, and go to state 14
    GLOB                      shift, and go to state 15
    INDEX                     shift, and go to state 17
    CHOMP                     shift, and go to state 21
    CHOP                      shift, and go to state 22
    SUBSTR                    shift, and go to state 29
    SPRINTF                   shift, and go to state 30
    SYSTEM                    shift, and go to state 31
    UNLINK                    shift, and go to state 33
    OPEN                      shift, and go to state 38
    REWIND                    shift, and go to state 39
    CLOSE                     shift, and go to state 40
    NOT                       shift, and go to state 43
    FUNCTION_BUILTIN_NUMERIC  shift, and go to state 45
    FUNCTION_BUILTIN_TEXT     shift, and go to state 46
    FUNCTION_USER             shift, and go to state 47
    STRING                    shift, and go to state 48
    S_FROM                    shift, and go to state 49
    '<'                       shift, and go to state 50
    '+'                       shift, and go to state 51
    '-'                       shift, and go to state 52
    '/'                       shift, and go to state 53
    '('                       shift, and go to state 54

    expr  go to state 130


state 33

  157 expr: UNLINK . '(' listexpr ')'

    '('  shift, and go to state 131


state 34

   98 while_block: WHILE . while_context texpr block

    $default  reduce using rule 97 (while_context)

    while_context  go to state 132


state 35

   99 until_block: UNTIL . while_context texpr block

    $default  reduce using rule 97 (while_context)

    while_context  go to state 133


state 36

   53 print: PRINT . listexpr
   54      | PRINT . CMDWORD listexpr
   55      | PRINT . COLUMNS
   56      | PRINT . cmd_words
   57      | PRINT .
